# aoc-2025

./: Cargo.toml
benches/: combined.rs
src/day1/: mod.rs  parser.rs  part1.rs  part2.rs
src/day2/: mod.rs  parser.rs  part1.rs  part2.rs
src/day3/: mod.rs  part1.rs  part2.rs
src/day4/: parser.rs  part1.rs  part2.rs
src/day5/: part1.rs  part2.rs
